<resources>
    <string name="app_name">Spc Measure</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_about">"About"</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_cannot_close">Cannot Close</string>
    <string name="text_cannot_login">Cannot Login</string>
    <string name="text_check_update">Check for Update</string>
    <string name="text_checking">Checking</string>
    <string name="text_checking_wifi_conn">Checking WiFi Connection</string>
    <string name="text_clear_pref_app">Cleared Preferred App</string>
    <string name="text_clear_value">Clear Value</string>
    <string name="text_collect_dt">Collect Datetime</string>
    <string name="text_collect_status">Collect Status</string>
    <string name="text_contact_admin">Contact Administrator.</string>
    <string name="text_cp">Cp</string>
    <string name="text_cpk">Cpk</string>
    <string name="text_db_written">Database Written</string>
    <string name="text_delete">Delete</string>
    <string name="text_deleting_setups">Deleting Setup(s)...</string>
    <string name="text_error">Error</string>
    <string name="text_exit">Exit</string>
    <string name="text_feature">Feature</string>
    <string name="text_get_value">Get Value</string>
    <string name="text_import">Import</string>
    <string name="text_in_control">In Control</string>
    <string name="text_information">Information</string>
    <string name="text_install_update">Install Update</string>
    <string name="text_install_version">Install Version</string>
    <string name="text_khs">Karmax Heavy Stamping</string>
    <string name="label_latest_version">Latest Version</string>
    <string name="text_limit_rev">Limit Rev</string>
    <string name="text_limit_type">Limit Type</string>
    <string name="text_limit_upper">Upper</string>
    <string name="text_limit_lower">Lower</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>
    <string name="text_long_delete">Long Press to Delete</string>
    <string name="text_measurement">Measurement</string>
    <string name="text_range">Range</string>
    <string name="text_cause">Cause</string>
    <string name="text_mess_delete_piece">Are you sure you want to Delete Piece created on %s?</string>
    <string name="text_mess_delete_piece_not_open">Cannot delete as Piece create on %s is not OPEN</string>
    <string name="text_mess_piece_deleted">Piece has been Deleted"</string>
    <string name="text_mess_piece_not_selected">No Piece is selected"</string>
    <string name="text_mess_feature_not_selected">No Feature is selected"</string>
    <string name="text_mess_delete_setup">Are you sure you want to Delete Setup %s?</string>
    <string name="text_mess_import_setup">Are you sure you want to Import the %d selected setup(s)?</string>
    <string name="text_mess_arguments_invalid">Arguments are invalid.  Contact Administrator.</string>
    <string name="text_mess_prod_id_invalid">Product Id is invalid.  Contact Administrator.</string>
    <string name="text_mess_piece_id_invalid">Piece Id is invalid.  Contact Administrator.</string>
    <string name="text_meas_not_cleared">Measurement already set.  Please clear and try again</string>
    <string name="text_meas_save_failed">Measurement save failed.  Contact Administrator.</string>
    <string name="text_new_piece">New Piece</string>
    <string name="text_no_data">No Data</string>
    <string name="text_no_wifi_conn">No WiFi Connection</string>
    <string name="text_okay">OK</string>
    <string name="text_open">Open</string>
    <string name="text_out_control">Out of Control</string>
    <string name="text_out_control_select_cause">Out of Control - Select Cause</string>
    <string name="text_pathname">Pathname: %1$s</string>
    <string name="text_piece_already_closed">Piece is already closed.</string>
    <string name="text_piece_not_open">Piece is not Open.</string>
    <string name="text_piece_now_closed">Piece is now Closed.</string>
    <string name="text_please_wait">Please wait a moment.</string>
    <string name="text_product">Product</string>
    <string name="text_simple_code_import">Simple Code Import (%s)</string>
    <string name="text_setup_import">Setup Import (%s)</string>
    <string name="text_meas_export">Measurement Export (%s)</string>
    <string name="text_meas_import">Measurement Import (%s)</string>
    <string name="text_meas_hist_title">Measurement History (%s)</string>
    <string name="text_meas_hist_text">HISTORY pieces imported (%1$s of %2$s)</string>
    <string name="text_history_delete_title">History Deleted(%s)</string>
    <string name="text_history_delete_text">HISTORY pieces deleted (%1$s of %2$s)</string>
    <string name="text_piece_create_failed">New Piece create failed.  Contact administrator.</string>
    <string name="text_piece_create_cancelled">New Piece cancelled</string>
    <string name="text_piece_export_title">Piece Export (%s)</string>
    <string name="text_piece_export_text">CLOSED pieces processed (%1$s of %2$s)</string>
    <string name="text_piece_close_failed">Piece Close failed.  An unknown error occurred.  Contact Administrator.</string>
    <string name="text_piece_close_question">Are you sure you wish to Close this piece?</string>
    <string name="text_piece_feature_measured_none">No Features have been measured.</string>
    <string name="text_piece_feature_measured_all">All Features have been measured.</string>
    <string name="text_piece_feature_measured_some">Only %1$s out of %2$s features have been measured.</string>
    <string name="text_please_exit_app">Please exit the App</string>
    <string name="text_checking_version">Checking Version</string>
    <string name="text_version_check">Version Check</string>
    <string name="text_version_title">Application Outdated</string>
    <string name="text_version_logout_not_found">Logged out as app version not found.</string>
    <string name="text_version_logout_too_old">Logged out as app is too old.</string>
    <string name="text_version_logout_app_old">App old.  Logged out.</string>
    <string name="text_version_install">Installed version %1$s (%2$s).</string>
    <string name="text_version_latest">Latest version %1$s (%2$s).</string>
    <string name="text_version_too_old">Installed version is too old.  Please update.</string>
    <string name="text_version_contact">Please contact SPC Coordinator for an update.</string>
    <string name="text_version_latest_installed">The latest version is installed.</string>
    <string name="text_version_newer_available">A newer version is available.</string>
    <string name="text_version_check_failed">Version check failed.</string>
    <string name="text_refresh">Refresh</string>
    <string name="text_scan">Scan</string>
    <string name="text_warning">Warning</string>
    <string name="text_update_app">Update App</string>
    <string name="text_updating_app">Updating App</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_must_implement_onnewpiecelistener"> must implement OnNewPieceListener</string>
    <string name="text_creating_piece">Creating Piece</string>
    <string name="text_not_set_operator">Operator not specified.  Please try again.</string>
    <string name="text_not_set_lot">Lot Number is invalid.  Please try again.</string>
    <string name="text_ble_not_supported">Bluetooth LE not supported.  Contact administrator</string>
    <string name="text_ble_battery_okay">Battery Level Okay (%s)</string>
    <string name="text_ble_battery_low">Battery Level Low (%s)</string>
    <string name="text_ble_battery_unknown">Battery Level Unknown (%s)</string>
    <string name="text_ble_instrument_id">Instrument ID = %s</string>
    <string name="text_ble_uom_now_mm">Unit of Measure now mm</string>
    <string name="text_ble_zero_reset">Zero was reset</string>
    <string name="text_ble_cmd_req_unknown">Unknown Command/Request.  Contact administrator. (%s)</string>
    <string name="text_ble_scan_ble">Scan BLE</string>
    <string name="text_ble_set_mm">Set mm</string>
    <string name="text_ble_set_zero">Set Zero</string>
    <string name="text_ble_get_battery">Get Battery</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="label_ucl">UCL:</string>
    <string name="label_lcl">LCL:</string>
    <string name="label_value">Value:</string>
    <string name="label_range">Range:</string>
    <string name="label_cause">Cause:</string>
    <string name="label_cp">Cp:</string>
    <string name="label_cpk">Cpk:</string>
    <string name="label_version_name">Version Name:</string>
    <string name="label_device_name">Device Name:</string>
    <string name="title_activity_import_setup">Import Setup</string>
    <string name="title_setup_list">Setup</string>
    <string name="title_setup_detail">Setup Detail</string>
    <string name="title_activity_mnt_setup">Maintain Setups</string>
    <string name="title_measurement_list">Measurements</string>
    <string name="title_measurement_detail">Measurement Detail</string>
    <string name="title_piece_list">Pieces</string>
    <string name="title_piece_detail">Piece Detail</string>
    <string name="title_activity_piece_list">Piece List</string>
    <string name="title_activity_setup_list">Setup List</string>
    <string name="title_activity_feature_review">Feature Review</string>
    <string name="title_activity_feature">Feature</string>
    <string name="title_new_piece">"New Piece"</string>
    <string name="tab_title_measurement">Measurement</string>
    <string name="tab_title_chart_xbar">Chart XBar</string>
    <string name="tab_title_chart_range">Chart Range</string>
    <string name="tab_title_information">Information</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="chart_title_xbar">Individual Reading (X) vs Time</string>
    <string name="chart_title_range">Moving Range (MR) vs Time</string>
    <string name="chart_label_individual_value">X</string>
    <string name="chart_label_individual_upper">UCL</string>
    <string name="chart_label_individual_lower">LCL</string>
    <string name="chart_label_range_value">MR</string>
    <string name="chart_label_range_upper">URL</string>
    <string name="chart_label_range_lower">LRL</string>
    <string name="pref_title_general">General</string>
    <string name="pref_title_measurement">Measurement</string>
    <string name="pref_show_notifications_title">Show Notifications</string>
    <string name="pref_show_notifications_summary">Specify whether notification messages should be generated</string>
    <string name="pref_in_control_auto_move_title">In-control Auto Move</string>
    <string name="pref_in_control_auto_move_summary">Specify whether to automatically move onto next Feature after in-control measurement taken</string>
    <string name="pref_in_control_delay_title">In-control Delay</string>
    <string name="pref_in_control_delay_summary">Specify delay used to move onto next Feature after in-control measurement taken</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_old">Login</string>
    <string name="sec_now_logged_out">You are now logged out.</string>
    <string name="sec_not_logged_in">You are not logged in.  Please Login and try again.</string>
    <string name="sec_cannot_measure">You cannot measure.  Please contact administrator.</string>
    <string name="prompt_meas_value">Enter Value</string>
</resources>