<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SetupImportActivity" >

    <item
        android:id="@+id/action_login"
        android:title="@string/text_login"
        android:orderInCategory="10"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/text_logout"
        android:orderInCategory="20"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/text_about"
        android:orderInCategory="101"
        android:showAsAction="never" />
</menu>
