<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.khs.spcmeasure.SetupListActivity">
    <item
        android:id="@+id/mnuImport"
        android:icon="@drawable/ic_action_download"
        android:showAsAction="always"
        android:title="@string/text_import"
        android:enabled="true"/>
    <item
        android:id="@+id/action_login"
        android:title="@string/text_login"
        android:orderInCategory="10"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/text_logout"
        android:orderInCategory="20"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
