<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.khs.spcmeasure.FeatureInfoFragment">

    <TextView android:id="@+id/txtProdName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:gravity="top"
        android:text="@string/text_product"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold" />

    <TextView android:id="@+id/txtFeatName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtProdName"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_alignStart="@id/txtProdName"
        android:text="@string/text_feature"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblCp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtFeatName"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_large"
        android:labelFor="@+id/txtCp"
        android:text="@string/label_cp"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/lblCp"
        android:layout_toEndOf="@id/lblCp"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/text_cp"
        android:textSize="@dimen/text_medium" />

    <TextView
        android:id="@+id/txtCpk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/txtCp"
        android:layout_alignParentRight="true"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/text_cpk"
        android:textSize="@dimen/text_medium" />

    <TextView
        android:id="@+id/lblCpk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtFeatName"
        android:layout_toLeftOf="@id/txtCpk"
        android:layout_marginTop="@dimen/margin_small"
        android:labelFor="@+id/txtCpk"
        android:text="@string/label_cpk"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold" />

    <ListView android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/lblCpk"
        android:paddingTop="@dimen/margin_small"
        android:drawSelectorOnTop="false" />

    <TextView android:id="@id/android:empty"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_no_data"
        android:textSize="@dimen/text_large" />

</RelativeLayout>