<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.khs.spcmeasure.ui.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_khs"
        android:id="@+id/textKhs"
        android:layout_marginTop="33dp"
        android:layout_alignParentTop="true"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textAppName"
        android:layout_marginTop="36dp"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        android:layout_below="@+id/textKhs"
        android:layout_centerHorizontal="true"
        android:onClick="onClickAppName"
        android:clickable="true" />

    <TextView
        android:id="@+id/lblInstallVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txtInstallVersion"
        android:text="@string/text_install_version"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:layout_alignTop="@+id/txtInstallVersion"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/txtInstallVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_install_version"
        android:textSize="@dimen/text_medium"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textAppName"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="53dp"
        android:onClick="onClickVersionName"
        android:clickable="true" />

    <TextView
        android:id="@+id/lblDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txtDeviceName"
        android:text="@string/label_device_name"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        android:layout_alignEnd="@id/lblInstallVersion"
        android:layout_alignTop="@+id/txtDeviceName"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/txtDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/label_device_name"
        android:textSize="@dimen/text_medium"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/txtInstallVersion"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_okay"
        android:id="@+id/btnOk"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:onClick="onClickBtnOk" />

</RelativeLayout>
