<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView android:id="@+id/txtLimType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_gravity="center_vertical"
        android:text="@string/text_limit_type"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        />
    
    <TextView android:id="@+id/txtLimUpper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_gravity="center_vertical"
        android:text="@string/text_limit_upper"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        />

    <TextView android:id="@+id/txtLimLower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_gravity="center_vertical"
        android:text="@string/text_limit_lower"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        />    
    
</LinearLayout>